--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -14,6 +14,8 @@
     border: none;
     cursor: pointer;
     margin: 0;
+    display: flex;
+    justify-content: center;
 
     &:hover {
         background-color: white;
@@ -24,10 +26,22 @@
     &.google-sign-in {
         background-color: #4285f4;
         color: white;
-    
+
         &:hover {
-          background-color: #357ae8;
-          border: none;
+            background-color: #357ae8;
+            border: none;
         }
-      }
+    }
+
+    &.inverted {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+
+        &:hover {
+            background-color: black;
+            color: white;
+            border: none;
+        }
+    }
 }
