--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,23 @@
         margin-left: auto;
         font-size: 36px;
     }
+
+    .test-warning {
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        font-size: 24px;
+        color: red;
+    }
+
+    .button {
+        margin-left: auto;
+        margin-top: 70px;
+    }
+
+    .empty-cart {
+        margin-right: auto;
+        margin-top: 20px;
+        font-size: 20px;
+    }
 }
